Fix the bugs with the positioning and white space at the right side

--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@ html {
   padding: 0;
   font-size: 1.2rem;
   font-family: 'Montserrat', sans-serif;
-  overflow-x: hidden;
+}
+.project {
+  position: relative;
+  overflow: hidden;
+  min-height: 100vh;
+  width: 100%;
 }
 * {
   box-sizing: border-box;
@@ -26,10 +31,7 @@ p {
   padding: 0;
   font-weight: 400;
 }
-@font-face {
-  font-family: 'Kanji';
-  src: url(fonts/Kanji_PA.ttf) format('truetype');
-}
+
 /*** Header ***/
 .header {
   position: fixed;
@@ -110,11 +112,11 @@ p {
 }
 
 .project-title {
-  padding: 4rem;
+  padding: 2.5rem;
   font-weight: bold;
   line-height: 160%;
-  padding-top: 6rem;
-  font-size: 1.4rem;
+  padding-top: 4rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
   word-spacing: 1000px;
   color: #585454;
